# rslearn

./: README.md  pyproject.toml
docs/: CoreConcepts.md  DatasetConfig.md  DatasetFormat.md  Examples.md  ModelConfig.md  TasksAndModels.md  Transforms.md
docs/examples/: BitemporalSentinel2.md  FinetuneOlmoEarth.md  NaipSentinel2.md  OlmoEarthEmbeddings.md  ProgrammaticWindows.md  WindowsFromGeojson.md
docs/foundation_models/: OlmoEarth.md  SatlasPretrain.md
rslearn/: arg_parser.py  lightning_cli.py  main.py
rslearn/config/: __init__.py  dataset.py
rslearn/data_sources/: __init__.py  aws_landsat.py  aws_open_data.py  aws_sentinel1.py  climate_data_store.py  copernicus.py  data_source.py  earthdaily.py  earthdata_srtm.py  eurocrops.py  gcp_public_data.py  google_earth_engine.py  local_files.py  openstreetmap.py  planet.py  planet_basemap.py  planetary_computer.py  usda_cdl.py  usgs_landsat.py  utils.py  worldcereal.py  worldcover.py  worldpop.py  xyz_tiles.py
rslearn/dataset/: dataset.py  handler_summaries.py  index.py  manage.py  materialize.py  window.py
rslearn/models/: anysat.py  clip.py  concatenate_features.py  conv.py  croma.py  dinov3.py  faster_rcnn.py  feature_center_crop.py  module_wrapper.py  molmo.py  multitask.py  panopticon.py  pick_features.py  pooling_decoder.py  prithvi.py  registry.py  resize_features.py  satlaspretrain.py  simple_time_series.py  singletask.py  ssl4eo_s12.py  terramind.py  trunk.py  unet.py  upsample.py
rslearn/models/clay/: clay.py
rslearn/models/detr/: detr.py
rslearn/models/galileo/: galileo.py
rslearn/models/olmoearth_pretrain/: model.py  norm.py
rslearn/models/presto/: presto.py  single_file_presto.py
rslearn/tile_stores/: default.py  tile_store.py
rslearn/train/: all_patches_dataset.py  data_module.py  dataset.py  lightning_module.py  prediction_writer.py  scheduler.py
rslearn/train/tasks/: classification.py  detection.py  embedding.py  multi_task.py  per_pixel_regression.py  regression.py  segmentation.py  task.py
rslearn/train/transforms/: concatenate.py  crop.py  mask.py  normalize.py  pad.py  select_bands.py  sentinel1.py  transform.py
rslearn/utils/: __init__.py  fsspec.py  geometry.py  jsonargparse.py  raster_format.py  vector_format.py
tests/: conftest.py
tests/fixtures/datasets/: image_to_class.py
tests/integration/: conftest.py  test_main.py
tests/integration/data_sources/: test_climate_data_store.py  test_gcp_public_data.py  test_local_files.py  test_openstreetmap.py  test_planetary_computer.py  test_worldcereal.py  test_worldcover.py  test_worldpop.py  test_xyz_tiles.py
tests/integration/train/: test_data_module.py  test_dataset.py  test_prediction_writer.py  test_transforms.py
tests/unit/config/: test_dataset.py
tests/unit/data_sources/: test_match_candidate_items_to_window.py
tests/unit/dataset/: test_dataset.py  test_manage.py  test_window.py  (+1 more)
(+30 files in other folders)
