[project]
name = "rslearn"
version = "0.0.17"
description = "A library for developing remote sensing datasets and models"
authors = [
    { name = "OlmoEarth Team" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39",
    "fiona>=1.10",
    "fsspec>=2025.10.0", # this is used both directly and indirectly (via universal_pathlib) in our code
    "jsonargparse>=4.35.0",
    "lightning>=2.5.1.post0",
    "Pillow>=11.3",
    "pyproj>=3.7",
    "python-dateutil>=2.9",
    "pytimeparse>=1.1",
    "rasterio>=1.4",
    "shapely>=2.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "tqdm>=4.67",
    "universal_pathlib>=0.2.6",
]

[project.optional-dependencies]
# These are requirements that are specific to a subset of data sources or models.
extra = [
    "accelerate>=1.10",
    "cdsapi>=0.7.6",
    "earthdaily[platform]>=1.0.7",
    "earthengine-api>=1.6.3",
    "einops>=0.8",
    # https://github.com/fsspec/universal_pathlib?tab=readme-ov-file#adding-universal_pathlib-to-your-project
    # https://github.com/fsspec/filesystem_spec?tab=readme-ov-file#install
    "fsspec[gcs, s3]", # for both direct use via fsspec and indirect use via universal_pathlib, docs suggest enabling specific backends like this
    "google-cloud-bigquery>=3.35",
    "google-cloud-storage>=2.18",
    "huggingface_hub>=0.34.4",
    "netCDF4>=1.7.2",
    "osmium>=4.0.2",
    "planet>=3.1",
    "planetary_computer>=1.0",
    "pycocotools>=2.0",
    "pystac_client>=0.9",
    "rtree>=1.4",
    # Needed by DINOv3.
    "termcolor>=3.0",
    "satlaspretrain_models>=0.3",
    "scipy>=1.16",
    "terratorch>=1.0.2",
    "transformers>=4.55",
    "wandb>=0.21",
    "timm>=0.9.7",
]

dev = [
    "interrogate>=1.7.0",
    "mypy>=1.17.1,<2",
    "pre-commit>=4.3.0",
    "pytest>=8.0",
    "pytest_httpserver",
    "ruff>=0.12.9",
    "pytest-dotenv",
    "pytest-xdist",
]

[project.urls]
homepage = "https://github.com/allenai/rslearn"
issues = "https://github.com/allenai/rslearn/issues"
repository = "https://github.com/allenai/rslearn"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.entry-points.console_scripts]
rslearn = "rslearn.main:main"

[tool.setuptools.packages.find]
include = ["rslearn*"]

[tool.setuptools.package-data]
rslearn = ["py.typed"]
"rslearn.models.clay.configs" = ["metadata.yaml"]
"rslearn.models.panopticon_data.sensors" = ["*.yaml"]

[tool.ruff]
fix = true

[tool.ruff.lint]
extend-select = ["D", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "--import-mode=importlib",
]
tmp_path_retention_policy = "failed"
